# hiviewdfx_api_metrics

./: BUILD.gn  Guide.md  Guide_En.md  OAT.xml  README.OpenSource  README.md  README_EN.md  bundle.json  hiviewdfx.gni
manager/histogram/include/: bucket_ranges.h  histogram_base.h  shared_histogram.h
manager/histogram/src/: bucket_ranges.cpp  histogram_base.cpp  shared_histogram.cpp
manager/innerkits/include/: histogram_plugin_macros.h  ihistogram_plugin.h  log_wrapper.h  plugin_interface.h  plugin_manager.h
manager/innerkits/src/: plugin_interface.cpp  plugin_manager.cpp
test/kits/declaration/: @ohos.histogram.d.ts
test/kits/napi/src/: histogram_napi.cpp
