# Copyright (c) Huawei Technologies Co., Ltd. 2026. All rights reserved.

import("hiviewdfx.gni")

config("manager_config") {
  visibility = [ ":*" ]
  include_dirs = [ "manager/innerkits/include" ]
}

ohos_shared_library("histogrammanager") {
  public_configs = [ ":manager_config" ]

  sources = [
    "manager/innerkits/src/plugin_manager.cpp",
    "manager/innerkits/src/plugin_interface.cpp",
  ]

  deps = []

  external_deps = [
    "hilog:libhilog",
  ]

  part_name = "api_metrics"
  subsystem_name = "hiviewdfx"
}